# MyGenerativeRecommenders

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  learning_rate_monitor.yaml
configs/data/: ml-1m.yaml
configs/experiment/: ml-1m-hstu-aux.yaml  ml-1m-hstu-muon.yaml  ml-1m-hstu-rank.yaml  ml-1m-hstu-scion.yaml  ml-1m-hstu.yaml
configs/model/: hstu.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
src/generative_recommenders_pl/data/: preprocessor.py  reco_dataset.py
src/generative_recommenders_pl/models/: generative_recommenders.py  ranking.py  retrieval.py
src/generative_recommenders_pl/models/embeddings/: embeddings.py
src/generative_recommenders_pl/models/indexing/: candidate_index.py  top_k.py
src/generative_recommenders_pl/models/losses/: autoregressive_losses.py
src/generative_recommenders_pl/models/metrics/: multicls.py  retrieval.py
src/generative_recommenders_pl/models/negatives_samples/: negative_sampler.py
src/generative_recommenders_pl/models/optimizers/: muon.py  scion.py
src/generative_recommenders_pl/models/preprocessors/: __init__.py  (+5 more)
src/generative_recommenders_pl/scripts/: convert_ckpt.py  eval.py  predict.py  prepare_data.py  train.py
src/generative_recommenders_pl/utils/: instantiators.py  logger.py
src/miaoxin_recodata/: evaluation_code_tencent_amgr.py  features.py  movies_encoded.csv  preprocessor_mx.py  reco_dataset.py  training_code_tencent_amgr.py
tests/: test_metrics.py  test_ops.py
(+9 files in other folders)
